# clawbernetes

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.gpu  LICENSE-MIT  Makefile  QUICKSTART.md  README.md  SECURITY.md  build_rs_cov.profraw  clawbernetes-prd.json  cliff.toml  docker-compose.yml
.gitea/workflows/: ci.yml  release.yml
.github/workflows/: ci.yml  release.yml
crates/claw-alerts/: Cargo.toml
crates/claw-alerts/src/: channels.rs  error.rs  lib.rs  manager.rs  types.rs
crates/claw-audit/: Cargo.toml
crates/claw-audit/src/: error.rs  events.rs  lib.rs  logger.rs
crates/claw-auth/: Cargo.toml
crates/claw-auth/src/: apikey.rs  error.rs  headers.rs  jwt.rs  lib.rs  rbac.rs  types.rs
crates/claw-autoscaler/: Cargo.toml
crates/claw-autoscaler/src/: autoscaler.rs  error.rs  lib.rs  manager.rs  types.rs
crates/claw-bridge/: Cargo.toml
crates/claw-bridge/src/: error.rs  lib.rs  main.rs  protocol.rs
crates/claw-bridge/src/handlers/: auth.rs  cluster.rs  deploy.rs  mod.rs  molt.rs  network.rs  observability.rs  operations.rs  pki.rs  secrets.rs  service.rs  storage.rs  tenancy.rs  vault.rs  workload.rs
crates/claw-cli/: Cargo.toml
crates/claw-cli/src/: cli.rs  client.rs  commands.rs  error.rs  lib.rs  main.rs  output.rs
crates/claw-cli/src/commands/: alert.rs  auth.rs  autoscale.rs  dashboard.rs  deploy.rs  logs.rs  metrics.rs  mod.rs  molt.rs  namespace.rs  node.rs  preempt.rs  priority.rs  rollback.rs  run.rs  secret.rs  service.rs  status.rs  tenant.rs
crates/claw-compute/: Cargo.toml
crates/claw-compute/src/: device.rs  error.rs  gpu.rs  kernels.rs  lib.rs  tensor.rs
crates/claw-compute/src/container/: config.rs  docker.rs  error.rs  mod.rs  runtime.rs  status.rs
crates/claw-config/: Cargo.toml
crates/claw-dashboard/: Cargo.toml
crates/claw-dashboard/src/: config.rs  error.rs  handlers.rs  lib.rs  routes.rs  server.rs  state.rs  types.rs  websocket.rs
crates/claw-ddos/: Cargo.toml
crates/claw-ddos/src/: bandwidth.rs  blocklist.rs  config.rs  connection.rs  error.rs  geo.rs  lib.rs  protection.rs  rate_limit.rs  reputation.rs
crates/claw-deploy/: Cargo.toml
crates/claw-deploy/src/: error.rs  executor.rs  lib.rs  monitor.rs  parser.rs  strategy.rs  types.rs
crates/claw-discovery/: Cargo.toml
crates/claw-discovery/src/: dns.rs  lib.rs  load_balancer.rs  registry.rs  types.rs
crates/claw-e2e-tests/: Cargo.toml
crates/claw-e2e-tests/src/: lib.rs
crates/claw-e2e-tests/tests/: auth_rbac.rs  deployment.rs  discovery.rs  gateway_cli_node.rs  helpers.rs  observability.rs  secrets_pki.rs  tenancy.rs  workload_lifecycle.rs
crates/claw-gateway/: Cargo.toml
crates/claw-gateway-server/: Cargo.toml
crates/claw-gateway-server/src/: cli_handler.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  mesh.rs  molt.rs  molt_announce.rs  molt_config.rs  molt_escrow.rs  molt_staking.rs  server.rs  session.rs
crates/claw-gateway/src/: advanced_scheduler.rs  dispatch.rs  lib.rs  logs.rs  registry.rs  scheduler.rs  workload.rs
crates/claw-gateway/tests/: dispatch_test.rs
crates/claw-identity/: Cargo.toml
crates/claw-ingress/: Cargo.toml
crates/claw-logs/: Cargo.toml
crates/claw-logs/src/: collector.rs  error.rs  file_store.rs  index.rs  lib.rs  store.rs  traits.rs  types.rs
crates/claw-metrics/: Cargo.toml
crates/claw-metrics/benches/: metrics_benchmarks.rs
crates/claw-metrics/src/: collector.rs  error.rs  lib.rs  prometheus.rs  query.rs  storage.rs  types.rs
crates/claw-network/: Cargo.toml
crates/claw-network/src/: allocation.rs  discovery.rs  lib.rs  mesh.rs  types.rs
crates/claw-observe/: Cargo.toml
crates/claw-observe/src/: analyzer.rs  correlator.rs  detectors.rs  formatter.rs  lib.rs  types.rs
crates/claw-persist/: Cargo.toml
crates/claw-pki/: Cargo.toml
crates/claw-pki/src/: ca.rs  error.rs  lib.rs  rotation.rs  store.rs  types.rs  validation.rs
crates/claw-preemption/: Cargo.toml
crates/claw-preemption/src/: error.rs  lib.rs  manager.rs  preemptor.rs  types.rs
crates/claw-proto/: Cargo.toml
crates/claw-proto/src/: cli.rs  error.rs  events.rs  lib.rs  messages.rs  scheduling.rs  selector.rs  types.rs  validation.rs  workload.rs
crates/claw-rollback/: Cargo.toml
crates/claw-rollback/src/: analysis.rs  executor.rs  history.rs  lib.rs  triggers.rs  types.rs
crates/claw-scheduler/: Cargo.toml
crates/claw-scheduler/src/: lib.rs
crates/claw-secrets/: Cargo.toml
crates/claw-secrets/src/: access.rs  audit.rs  encryption.rs  error.rs  lib.rs  store.rs  types.rs
crates/claw-storage/: Cargo.toml
crates/claw-storage/src/: error.rs  lib.rs  manager.rs  types.rs  workload.rs
crates/claw-tailscale/: Cargo.toml
crates/claw-tailscale/src/: auth.rs  client.rs  error.rs  lib.rs  node.rs  service.rs
crates/claw-tenancy/: Cargo.toml
crates/claw-tenancy/src/: error.rs  lib.rs  manager.rs  namespace.rs  quota.rs  tenant.rs
crates/claw-tui/: Cargo.toml
crates/claw-tui/src/: app.rs  data.rs  events.rs  lib.rs  main.rs  ui.rs
crates/claw-validation/: Cargo.toml
crates/claw-validation/src/: builder.rs  command.rs  error.rs  lib.rs  numeric.rs  safe_path.rs  sanitized.rs  strings.rs  tests.rs
crates/claw-wireguard/: Cargo.toml
crates/clawnode/: Cargo.toml
crates/molt-agent/: Cargo.toml
crates/molt-attestation/: Cargo.toml
crates/molt-core/: Cargo.toml
crates/molt-integration-tests/: Cargo.toml
crates/molt-market/: Cargo.toml
crates/molt-p2p/: Cargo.toml
crates/molt-token/: Cargo.toml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
docs/: COVERAGE.md  architecture.md  cli-reference.md  configuration.md  cubecl-integration.md  development.md  docker.md  ecosystem-replacement.md  molt-network.md  security.md  skills.md  tailscale-integration.md  use-cases.md  user-guide.md  wireguard-integration.md
examples/: clawnode.toml
plugin/: README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json
security/: crypto-audit.md  input-validation-audit.md  molt-protocol-audit.md  secrets-network-audit.md  unsafe-audit.md
(+226 files in other folders)
