[workspace]
resolver = "2"
members = [
    "crates/clawnode",
    "crates/claw-proto",
    "crates/claw-cli",
    "crates/claw-gateway",
    "crates/molt-core",
    "crates/molt-p2p",
    "crates/molt-agent",
    "crates/molt-market",
    "crates/molt-attestation",
    "crates/molt-integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/clawbernetes/clawbernetes"
authors = ["Clawbernetes Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.13"
prost-types = "0.13"

# Networking
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
quinn = "0.11"
rustls = "0.23"

# Crypto
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
blake3 = "1.5"
rand = "0.8"
bs58 = "0.5"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Testing
proptest = "1.5"
criterion = "0.5"
test-case = "3.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
