[package]
name = "claw-audit"
description = "Security audit logging for Clawbernetes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging/tracing
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
test-case = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
