[package]
name = "claw-auth"
description = "Authentication and RBAC for Clawbernetes - API keys, JWT tokens, and role-based access control"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging/tracing
tracing = { workspace = true }

# Crypto
blake3 = { workspace = true }
rand = { workspace = true }

# Secure memory
zeroize = { version = "1.8", features = ["derive"] }

# Identifiers
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Encoding
base64 = "0.22"

# Constant-time comparison
subtle = "2.6"

# JWT support
jsonwebtoken = "9.3"

[dev-dependencies]
test-case = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
