[package]
name = "claw-bridge"
version = "0.1.0"
edition = "2024"
description = "JSON-RPC bridge for OpenClaw plugin integration"
license = "MIT"

[[bin]]
name = "claw-bridge"
path = "src/main.rs"

[dependencies]
# Core crates
claw-discovery = { path = "../claw-discovery" }
claw-metrics = { path = "../claw-metrics" }
claw-logs = { path = "../claw-logs" }
claw-alerts = { path = "../claw-alerts" }
claw-compute = { path = "../claw-compute", default-features = false, features = ["cpu"] }
molt-core = { path = "../molt-core" }
molt-market = { path = "../molt-market" }

# Runtime
tokio = { version = "1.44", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
parking_lot = "0.12"
lazy_static = "1.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tokio-test = "0.4"
