[package]
name = "claw-bridge"
version = "0.1.0"
edition = "2024"
description = "JSON-RPC bridge for OpenClaw plugin integration"
license = "MIT"

[[bin]]
name = "claw-bridge"
path = "src/main.rs"

[dependencies]
# Core crates
claw-proto = { path = "../claw-proto" }
claw-gateway = { path = "../claw-gateway" }
claw-metrics = { path = "../claw-metrics" }
claw-logs = { path = "../claw-logs" }
claw-alerts = { path = "../claw-alerts" }
claw-compute = { path = "../claw-compute", default-features = false, features = ["cpu"] }

# Phase 1: Auth, Deploy, Tenancy
claw-auth = { path = "../claw-auth" }
claw-deploy = { path = "../claw-deploy" }
claw-tenancy = { path = "../claw-tenancy" }

# Phase 2: Secrets, PKI
claw-secrets = { path = "../claw-secrets" }
claw-pki = { path = "../claw-pki" }

# Phase 3: Operations
claw-autoscaler = { path = "../claw-autoscaler" }
claw-preemption = { path = "../claw-preemption" }
claw-rollback = { path = "../claw-rollback" }

# Phase 4: Service Mesh
claw-discovery = { path = "../claw-discovery" }
claw-storage = { path = "../claw-storage" }

# MOLT
molt-core = { path = "../molt-core" }
molt-market = { path = "../molt-market" }

# Runtime
tokio = { version = "1.44", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
parking_lot = "0.12"
lazy_static = "1.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tokio-test = "0.4"
