[package]
name = "claw-compute"
description = "Multi-platform GPU compute for Clawbernetes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["cpu"]
cpu = []
# GPU backends via CubeCL
cubecl-wgpu = ["dep:cubecl", "dep:cubecl-wgpu"]
cubecl-cuda = ["dep:cubecl", "dep:cubecl-cuda"]
# Convenience aliases
metal = ["cubecl-wgpu"]  # Metal via wgpu on macOS
# Container runtime support
container-runtime = ["dep:bollard"]
# All backends
all = ["cpu", "cubecl-wgpu", "cubecl-cuda", "container-runtime"]

[dependencies]
# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }

# Logging
tracing = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Math functions (for CPU kernels)
libm = "0.2"

# CubeCL for GPU compute
cubecl = { version = "0.9", optional = true }
cubecl-wgpu = { version = "0.9", optional = true }
cubecl-cuda = { version = "0.9", optional = true }

# Async for wgpu
pollster = "0.4"

# Docker API client
bollard = { version = "0.18", optional = true }

# Futures for async stream processing
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
test-case = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
