[package]
name = "claw-e2e-tests"
description = "End-to-end integration tests for Clawbernetes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
# Only needed for compile - actual test dependencies below

[dev-dependencies]
# Core crates under test
claw-gateway-server = { path = "../claw-gateway-server" }
claw-gateway = { path = "../claw-gateway" }
claw-cli = { path = "../claw-cli" }
claw-proto = { path = "../claw-proto" }
clawnode = { path = "../clawnode" }

# MOLT crates
molt-p2p = { path = "../molt-p2p" }
molt-token = { path = "../molt-token" }

# Testing utilities
tokio = { version = "1.43", features = ["full", "test-util"] }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
