[package]
name = "claw-network"
version.workspace = true
edition.workspace = true
description = "WireGuard mesh networking, IP allocation, and topology for Clawbernetes"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipnet = "2.10"
base64 = "0.22"

[dev-dependencies]
base64 = "0.22"

[lints]
workspace = true
