[package]
name = "claw-pki"
description = "Certificate Authority and PKI management for Clawbernetes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Certificate generation
rcgen = "0.13"

# Certificate parsing
x509-parser = { version = "0.17", features = ["verify"] }

# Encoding
base64 = "0.22"

# Time (needed by rcgen)
time = "0.3"

# Security - zeroize keys on drop
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
proptest = { workspace = true }
test-case = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
