[package]
name = "claw-proto"
description = "Protobuf definitions for Clawbernetes node-gateway communication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
test-case = { workspace = true }

[build-dependencies]
prost-build = "0.13"

[lints]
workspace = true
