[package]
name = "claw-scheduler"
version.workspace = true
edition.workspace = true
description = "Job scheduling, cron, namespaces, policies, alerts, and audit for Clawbernetes"
license.workspace = true
repository.workspace = true

[dependencies]
claw-persist = { path = "../claw-persist" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
