[package]
name = "claw-secrets"
description = "Secrets management system for Clawbernetes - encrypted at rest with workload identity-based access"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging/tracing
tracing = { workspace = true }

# Encryption
chacha20poly1305 = "0.10"

# Secure memory
zeroize = { version = "1.8", features = ["derive"] }

# Identifiers
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Encoding
base64 = "0.22"

# Randomness
rand = { workspace = true }

# Constant-time comparison
subtle = "2.6"

# Key derivation
blake3 = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
