[package]
name = "claw-secrets"
version.workspace = true
edition.workspace = true
description = "AES-256-GCM encrypted secrets management for Clawbernetes"
license.workspace = true
repository.workspace = true

[dependencies]
claw-persist = { path = "../claw-persist" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.14"

[lints]
workspace = true
