[package]
name = "claw-storage"
description = "Persistent storage and volume management for Clawbernetes workloads"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging/tracing
tracing = { workspace = true }

# Identifiers
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
proptest = { workspace = true }
tempfile = "3.14"

[lints]
workspace = true
