[package]
name = "claw-tailscale"
description = "Tailscale integration for Clawbernetes - alternative to raw WireGuard mesh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Input validation and safe command execution
claw-validation = { path = "../claw-validation", features = ["command"] }

# Async runtime
tokio = { version = "1.43", features = ["net", "io-util", "process", "sync", "fs", "rt", "macros", "rt-multi-thread"] }

# HTTP client for local API (Unix socket)
hyper = { version = "1.5", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
http-body-util = "0.1"

# Unix socket support
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
test-case = { workspace = true }
tokio-test = "0.4"
tempfile = "3.15"

[lints]
workspace = true
